uefi-macros/tests/ui/fail/entry_bad_attr_arg.stderr
error: Entry attribute accepts no arguments
 --> tests/ui/fail/entry_bad_attr_arg.rs:5:9
  |
5 | #[entry(some_arg)]
  |         ^^^^^^^^
